[workspace]
members = [
    "c",
    "canvas",
    "color",
    "content",
    "demo/android/rust",
    "demo/common",
    "demo/magicleap",
    "demo/native",
    "examples/canvas_text",
    "examples/canvas_sdl2",
    "examples/canvas_webgl_minimal",
    "examples/swf_basic",
    "geometry",
    "gl",
    "gpu",
    "lottie",
    "export",
    "metal",
    "renderer",
    "resources",
    "simd",
    "svg",
    "swf",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
    "web_canvas",
    "webgl",
]

default-members = [
    "c",
    "canvas",
    "content",
    "demo/common",
    "demo/native",
    "examples/canvas_text",
    "examples/swf_basic",
    "geometry",
    "gl",
    "gpu",
    "lottie",
    "export",
    "renderer",
    "simd",
    "svg",
    "swf",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
]

[patch.crates-io]
pathfinder_geometry = { path = "geometry" }
pathfinder_simd = { path = "simd" }

[patch."https://github.com/runtiva/pathfinder"]
pathfinder_content = { path = "content" }
pathfinder_color = { path = "color" }
pathfinder_geometry = { path = "geometry" }
pathfinder_renderer = { path = "renderer" }
pathfinder_simd = { path = "simd" }
