[package]
name = "pathfinder_gl"
version = "0.5.5"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A simple cross-platform GPU abstraction library: OpenGL backend"
license = "MIT/Apache-2.0"
repository = "https://github.com/runtiva/pathfinder"
homepage = "https://github.com/runtiva/pathfinder"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
gl = "0.14"
half = "1.6"

[dependencies.log]
version = "0.4"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5.5"

[dependencies.pathfinder_gpu]
path = "../gpu"
version = "0.5.5"

[dependencies.pathfinder_resources]
path = "../resources"
version = "0.5.5"

[dependencies.pathfinder_simd]
path = "../simd"
version = "0.5.5"
