[package]
name = "pathfinder_gpu"
version = "0.5.5"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A simple cross-platform GPU abstraction library"
license = "MIT/Apache-2.0"
repository = "https://github.com/runtiva/pathfinder"
homepage = "https://github.com/runtiva/pathfinder"

[dependencies]
bitflags = "1.2"
fxhash = "0.2"
half = "1.6"
log = "0.4"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[dependencies.pathfinder_color]
path = "../color"
version = "0.5.5"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5.5"

[dependencies.pathfinder_resources]
path = "../resources"
version = "0.5.5"

[dependencies.pathfinder_simd]
path = "../simd"
version = "0.5.5"
