[package]
name = "pathfinder_simd"
version = "0.5.5"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"
description = "A simple SIMD library"
license = "MIT/Apache-2.0"
repository = "https://github.com/runtiva/pathfinder"
homepage = "https://github.com/runtiva/pathfinder"

[features]
pf-no-simd = []

[dependencies]

[build-dependencies]
rustc_version = "0.2.3"
