[package]
name = "pathfinder_text"
version = "0.5.5"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "Text layout for the Pathfinder vector graphics renderer"
license = "MIT/Apache-2.0"
repository = "https://github.com/runtiva/pathfinder"
homepage = "https://github.com/runtiva/pathfinder"

[dependencies]
font-kit = "0.6"

[dependencies.pathfinder_content]
path = "../content"
version = "0.5.5"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5.5"

[dependencies.pathfinder_renderer]
path = "../renderer"
version = "0.5.5"

[dependencies.skribo]
version = "0.1"
