[package]
name = "canvas_sdl2"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
sdl2 = "0.33"
sdl2-sys = "0.33"
font-kit = "0.6"
gl = "0.14"
log = "0.4"
env_logger = "0.7.1"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.pathfinder_canvas]
path = "../../canvas"

[dependencies.pathfinder_color]
path = "../../color"

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.surfman]
git = "https://github.com/servo/surfman"
rev = "f3df871ac8c3926fe9106d86a3e51e20aa50d3cc"
features = ["sm-winit", "sm-x11"]

[dependencies.winit]
version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105
